<resources>
    <string name="app_name">Movie List</string>
    <string name="activity_login_password_label">Password</string>
    <string name="activity_login_username_label">Username</string>
    <string name="activity_login_login_label">Login</string>
    <string name="content_description_movie_image">Poster tentang film</string>
    <string name="activity_menu_logout_label">Logout</string>
    <string name="activity_add_movie_title_label">Judul</string>
    <string name="activity_add_movie_year_label">Tahun</string>
    <string name="activity_add_movie_img_url_label">Link Gambar</string>
    <string name="activity_add_movie_save_label">Simpan</string>

    <string name="should_not_be_empty_field">Field ini tidak boleh kosong!</string>
</resources>
