<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/standard_parent_padding"
    tools:context="io.github.golok56.movielist.app.activity.AddMovieActivity">

    <EditText
        android:id="@+id/et_activity_add_movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_add_movie_title_label" />

    <EditText
        android:id="@+id/et_activity_add_movie_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin_between_element"
        android:hint="@string/activity_add_movie_year_label" />

    <EditText
        android:id="@+id/et_activity_add_movie_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin_between_element"
        android:hint="@string/activity_add_movie_img_url_label" />

    <Button
        android:id="@+id/btn_activity_add_movie_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin_between_element"
        android:text="@string/activity_add_movie_save_label" />

</LinearLayout>
